[tool.poetry]
name = "impute_test"
version = "0.0.1"
description = "测试poetry上传到pipy"
authors = ["Asdil <fake_add@126.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Asdil/impute_test"
repository = "https://github.com/Asdil/impute_test"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
